--- a/main.scss
+++ b/main.scss
@@ -1,4 +1,8 @@
 @import "https://fonts.googleapis.com/css?family=Poppins";
+
+$primary-color: rgb(231, 71, 31);
+$home-font: "Poppins";
+
 body {
   background-image: url(assets/img/bg.jpg);
   background-size: cover;
@@ -8,7 +12,7 @@ body {
 .page-container {
   position: relative;
   min-height: 95vh;
-  font-family: "Poppins";
+  font-family: $home-font;
   color: #fff;
   font-size: large;
 }
@@ -28,7 +32,7 @@ footer {
 
 #social {
   margin: 0 auto;
-  padding: 0.5rem;
+  padding: .5rem;
   opacity: 80%;
 }
 
@@ -40,14 +44,13 @@ footer {
 #box {
   background: rgba(0, 0, 0, 0.55);
   width: 75%;
-  aspect-ratio: 1/0.75;
+  aspect-ratio: 1/.75;
   max-height: 75%;
   position: absolute;
   inset: 0rem;
   margin: auto;
   transition: 0.3s;
-  border-radius: 5px;
-  /* 5px rounded corners */
+  border-radius: 5px; /* 5px rounded corners */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   backdrop-filter: blur(20px);
   -webkit-backdrop-filter: blur(20px);
@@ -60,10 +63,10 @@ footer {
     aspect-ratio: 1/1.5;
   }
 }
+
 #box:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.4);
-  -webkit-backdrop-filter: blur(25px);
-          backdrop-filter: blur(25px);
+  backdrop-filter: blur(25px);
 }
 
 #box-content {
@@ -93,14 +96,14 @@ footer {
 
 #box-img {
   grid-column: 1;
-  grid-row: 2/5;
+  grid-row: 2 / 5;
   width: 100%;
-  max-height: 100%;
+  max-height: 100%; 
 }
 
 #text-box {
-  grid-column: 2/4;
-  grid-row: 2/5;
+  grid-column: 2 / 4;
+  grid-row: 2 / 5;
   color: white;
   text-align: justify;
   font-weight: 900;
@@ -114,4 +117,4 @@ footer {
 
 #badge:hover {
   transform: scale(1.1);
-}/*# sourceMappingURL=main.css.map */
+}
