--- a/css/main.css
+++ b/css/main.css
@@ -10325,7 +10325,7 @@ a.has-text-danger-dark:hover, a.has-text-danger-dark:focus {
   opacity: 100%;
 }
 .social-button#github {
-  content: url("github.png");
+  content: url("assets/img/github.png");
   height: 2rem;
 }
 .social-button#twitter {
