--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
+/* IMPORTS */
 @import "https://fonts.googleapis.com/css?family=Montserrat&display=swap";
-/* CUSTOM VARIABLES */
-/* CONTENT STYLING */
-/* CUSTOM ELEMENTS */
+/* CUSTOM COMPONENTS */
 .socials {
   display: flex;
   justify-content: center;
@@ -18,11 +17,11 @@
   opacity: 100%;
 }
 .social-button#github {
-  content: url("assets/img/github.png");
+  content: url("../assets/img/github.png");
   height: 2rem;
 }
 .social-button#twitter {
-  content: url("assets/img/twitter.png");
+  content: url("../assets/img/twitter.png");
   height: 2rem;
 }
 .social-button#bulma {
