--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -1,12 +1,6 @@
-@import "https://fonts.googleapis.com/css?family=Montserrat&display=swap";
+/* CUSTOM COMPONENTS */
 
-/* CUSTOM VARIABLES */
-
-
-/* CONTENT STYLING */
-
-
-/* CUSTOM ELEMENTS */
+@use 'components/imports';
 
 .socials {
   display: flex;
@@ -25,12 +19,12 @@
   }
 
   &#github {
-    content: url("assets/img/github.png");
+    content: url("../assets/img/github.png");
     height: 2rem;
   }
 
   &#twitter {
-    content: url("assets/img/twitter.png");
+    content: url("../assets/img/twitter.png");
     height: 2rem;
   }
 
