--- a/src/style.scss
+++ b/src/style.scss
@@ -1,8 +1,10 @@
 /* CUSTOM COMPONENTS */
 
-@use 'modules/imports';
+@import 'bulma/bulma.sass';
 
-@import '../../node_modules/bulma/bulma.sass';
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 .socials {
   display: flex;
@@ -21,12 +23,12 @@
   }
 
   &#github {
-    content: url("../assets/img/github.png");
+    content: url("./assets/img/github.png");
     height: 2rem;
   }
 
   &#twitter {
-    content: url("../assets/img/twitter.png");
+    content: url("./assets/img/twitter.png");
     height: 2rem;
   }
 
