--- a/src/_sass/style.scss
+++ b/src/_sass/style.scss
@@ -21,12 +21,12 @@
   }
 
   &#github {
-    content: url("./assets/img/github.png");
+    content: url("../assets/img/github.png");
     height: 2rem;
   }
 
   &#twitter {
-    content: url("./assets/img/twitter.png");
+    content: url("../assets/img/twitter.png");
     height: 2rem;
   }
 
